# bevy_mod_pies_spacetraders_api

./: Cargo.toml  README.md
examples/custom_endpoint_example/: Cargo.toml
examples/custom_endpoint_example/src/: main.rs
examples/simple_example/: Cargo.toml
examples/simple_example/src/: main.rs
openapi/: Cargo.toml
src/: lib.rs
src/internal/: client.rs  endpoint.rs  marker.rs  minreq_request_builder.rs  mod.rs  rate_limiter.rs  request.rs  respond.rs
src/internal/endpoints/: get_status.rs  mod.rs  register_new_agent.rs
src/internal/endpoints/agents/: get_agent.rs  get_public_agent.rs  list_agents.rs  mod.rs
src/internal/endpoints/contracts/: accept_contract.rs  deliver_cargo_to_contract.rs  fulfill_contract.rs  get_contract.rs  list_contracts.rs  mod.rs
src/internal/endpoints/factions/: get_faction.rs  list_factions.rs
src/internal/endpoints/fleet/: create_chart.rs  create_survey.rs  dock_ship.rs  extract_resources.rs  extract_resources_with_survey.rs  get_mounts.rs  get_ship.rs  get_ship_cargo.rs  get_ship_cooldown.rs  get_ship_nav.rs  install_mount.rs  jettison_cargo.rs  jump_ship.rs  list_ships.rs  mod.rs  navigate_ship.rs  negotiate_contract.rs  orbit_ship.rs  patch_ship_nav.rs  purchase_cargo.rs  purchase_ship.rs  refuel_ship.rs  remove_mount.rs  scan_ships.rs  scan_systems.rs  scan_waypoints.rs  sell_cargo.rs  ship_refine.rs  transfer_cargo.rs  warp_ship.rs
src/internal/endpoints/systems/: all_systems.rs  get_jump_gate.rs  get_market.rs  get_shipyard.rs  get_system.rs  get_waypoint.rs  list_systems.rs  list_waypoints_in_system.rs  mod.rs
src/internal/markers/: get_status.rs  register_new_agent.rs
src/internal/markers/agents/: get_agent.rs
src/internal/markers/contracts/: accept_contract.rs  deliver_cargo_to_contract.rs  fulfill_contract.rs  get_contract.rs  list_contracts.rs
src/internal/markers/factions/: get_faction.rs  list_factions.rs  mod.rs
src/internal/markers/fleet/: create_chart.rs  create_survey.rs  dock_ship.rs  extract_resources.rs  get_mounts.rs  get_ship.rs  get_ship_cargo.rs  get_ship_cooldown.rs  get_ship_nav.rs  install_mount.rs  jettison_cargo.rs  jump_ship.rs  list_ships.rs  mod.rs  navigate_ship.rs  negotiate_contract.rs  orbit_ship.rs  patch_ship_nav.rs  purchase_cargo.rs  purchase_ship.rs  refuel_ship.rs  remove_mount.rs  scan_ships.rs  scan_systems.rs  scan_waypoints.rs  sell_cargo.rs  ship_refine.rs  transfer_cargo.rs  warp_ship.rs
src/internal/markers/systems/: all_systems.rs  get_jump_gate.rs  get_market.rs  get_shipyard.rs  get_system.rs  get_waypoint.rs  list_systems.rs  list_waypoints_in_system.rs  mod.rs
