[package]
name = "bevy_mod_pies_spacetraders_api"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "game-development"]
keywords =  [ "bevy", "spacetraders" ]
include = ["/src", "/examples"]
description = "SpaceTraders API implemented for Bevy the game engine."
authors = ["github.com/Pieresqi"]
repository = "https://github.com/Pieresqi/bevy_mod_pies_spacetraders_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["core", "offi-types"]
core = []
offi-types = []

[dependencies]
futures-lite = "1.13.0"
minreq = { version = "2.10.0", features = ["https", "json-using-serde"] }
serde = "1.0.188"
serde_json = "1.0.100"
htb = "0.2.2"
bevy_ecs = "0.11.3"
bevy_tasks = "0.11.3"
bevy_time = "0.11.3"
bevy_app = "0.11.3"
crossbeam-channel = "0.5.8"
space-traders = "0.1.1"

